--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ origin[...] - Main (branch) - end user updated app
            
 git init -  # initialize new repo & if new repo
 <!-- git remote add origin [url] --> - # if new repo
-git branch branchName - #create branch and move into it
+git branch main - #create branch and move into it
 git add file - add files to be tracked
 git commit -m "commit message" -  #commit the changes with message
 git push origin branchName - #push into remote repo
